# query_external_ip

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
src/: lib.rs
src/source/: http.rs  mod.rs
