[package]
name = "query_external_ip"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
once_cell = "1.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = { version = "1" }
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4.2"