[package]
name = "query_external_ip"
version = "0.1.0"
edition = "2018"
authors = ["Vlad Vasiliu"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/vladvasiliu/query_external_ip.git"
description = "Asynchronous library for querying the system's external IPv4 and IPv6"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
futures = "0.3"
log = "0.4"
once_cell = "1.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = { version = "1" }
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4.2"
